Aula 04 - Abrindo a caixa preta

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JobsCalc é uma calculadora que irá ajudar os desenvolvedores freelancers a calcular as despesas de um projeto",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "init-db": "node src/db/init.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
   "homepage": "https://github.com/vdonoladev/jobsCalc#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite": "^4.0.21",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
